# photodedup

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
src/photodedup/: __main__.py
src/photodedup/domain/: models.py  services.py
src/photodedup/infrastructure/: file_scanner.py  hasher.py
src/photodedup/ui/: formatters.py
tests/: test_hasher.py  test_models.py  test_scanner.py  test_services.py
